--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Project files
 data/kickstarter-etter-cosn2013/*
 
+### IPythonNotebook ###
+# Temporary data
+.ipynb_checkpoints/
+
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
